<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    >
        <Button 
            android:id="@+id/mouse_left"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mouse_02"
            />
        <Button 
            android:id="@+id/mouse_right"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mouse_03"
            />
    </LinearLayout>
    <View 
        android:id="@+id/mouse_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#999999"
        />
    <LinearLayout 
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    >
        <Button 
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <Button 
            android:id="@+id/mouse_activity_sound_up"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mouse_04"
            />
        <Button 
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    >
        <Button 
            android:id="@+id/mouse_move_left"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mouse_05"
            />
        <Button 
            android:id="@+id/mouse_move_full"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <Button 
            android:id="@+id/mouse_move_right"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mouse_06"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    >
        <Button 
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <Button 
            android:id="@+id/mouse_activity_sound_down"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mouse_07"
            />
        <Button 
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
    </LinearLayout>
    

</LinearLayout>